# TPI-ED3

./: .gitignore  .project  CMakeLists.txt  README.md
CMSISv2p00_LPC17xx/Drivers/inc/: lpc17xx_pinsel.h
CMSISv2p00_LPC17xx/inc/: LPC17xx.h
dev/altium/: ECGAquisitionBoard.OutJob  ECGAquisitionBoard.PcbDoc  ECGAquisitionBoard.PcbDoc.htm  ECGAquisitionBoard.PcbLib  ECGAquisitionBoard.PrjPcb  ECGAquisitionBoard.SchDoc  ECGAquisitionBoard.SchLib
dev/matlab/: castear_archivos.m
dev/matlab/ecg_double/: ecg_double_180ppm.txt
dev/matlab/ecg_q15/: ecg_q15_t_60ppm.txt
dev/matlab/filter/: fdacoefs.h  iir_notch.fda
dev/matlab/sim/: derivsecgsyn.m  ecgsyn.m  run.m  save_ecg.m
dev/matlab/sim/ecg_dac12b/: ecg_uint16_t_120ppm.txt  ecg_uint16_t_180ppm.txt  ecg_uint16_t_30ppm.txt  ecg_uint16_t_60ppm.txt
dev/matlab/sim/ecg_double/: ecg_double_120ppm.txt  ecg_double_30ppm.txt  ecg_double_60ppm.txt
dev/matlab/sim/ecg_q15/: ecg_q15_t_120ppm.txt  ecg_q15_t_180ppm.txt  ecg_q15_t_30ppm.txt
dev/nxp/iir_notch_ecg/: .cproject  .project  iir_notch_ecg LinkServer Debug.launch  iir_notch_ecg.mex
dev/nxp/iir_notch_ecg/Debug/: iir_notch_ecg_Debug.ld  makefile  (+2 more)
dev/stm32/: .cproject  .project  dac_ecg Debug.launch  dac_ecg.ioc
dev/stm32/Debug/: dac_ecg.elf  dac_ecg.list  makefile
doc/: Informe.tex  casos_de_prueba.ods
gui/: compile.cmd  main.py  scope_window.py  uart_connection.py  ui.py  ui.ui
inc/: config.h  util.h
src/: config.c  dma_test.c  filter_test.c  flash_test.c  main.c  util.c
tests/: README.md  filter_test.c  test-adc-buffer  test-adc-umbral  test_uart.c
(+41 files in other folders)
